pod life cycle